--- a/game.css
+++ b/game.css
@@ -7,11 +7,59 @@ body {
 	background: #D70D1B;
 	color: white;
 }
+header {
+	display: flex;
+	align-items: center;
+	font-size: 1.5em;
+	max-width: 71em;
+}
+.xp {
+	flex: 1;
+	margin: 0.5em;
+	background: black;
+}
+.meter { 
+	height: 1em;
+	position: relative;
+	background: #333;
+	padding: 10px;
+	/*box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);*/
+	border-radius: 4px;
+}
+.meter > span {
+	display: block;
+	height: 100%;
+	/*border-top-right-radius: 8px;
+	border-bottom-right-radius: 8px;
+	border-top-left-radius: 20px;
+	border-bottom-left-radius: 20px;*/
+	background-color: rgb(43,194,83);
+	background-image: linear-gradient(
+		center bottom,
+		rgb(43,194,83) 37%,
+		rgb(84,240,84) 69%
+	);
+	background-image: -webkit-linear-gradient(
+		center bottom,
+		rgb(43,194,83) 37%,
+		rgb(84,240,84) 69%
+	);
+	box-shadow: 
+		inset 0 2px 9px  rgba(255,255,255,0.3),
+		inset 0 -2px 6px rgba(0,0,0,0.4);
+	position: relative;
+	overflow: hidden;
+}
+
+header,
+.page {
+	margin: 20px auto;
+}
+
 .page {
 	background: white;
 	color: #333333;
 	max-width: 71em;
-	margin: 50px auto;
 	border-radius: 4px;
 	padding: 40px;
 	overflow: auto;
