--- a/game.css
+++ b/game.css
@@ -73,7 +73,7 @@ header,
 	color: white;
 	cursor: pointer;
 }
-.vid.flagged::after {
+.vid.flagged::before {
 	display: block;
 	content: "✓";
 	/*background: #D70D1B;*/
@@ -83,6 +83,17 @@ header,
 	vertical-align: middle;
 	line-height: 100%;
 	line-height: 200px;
+}
+.vid.removed::after {
+	display: block;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	content: "This video has been removed.";
+	background: rgba(0, 0, 0, 0.5);
+	color: white;
+	text-align: center;
+	line-height: 2em;
 }
 /*.vid .flag {
 	background: #D70D1B;
